feat: add cloudinary for photo storage

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,11 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=cloudinary
+
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
