--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@inertiajs/react": "^2.0.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^22.13.4",
+        "@types/node": "^22.13.5",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.2.0",
@@ -31,6 +31,7 @@
         "workbox-window": "^7.3.0"
     },
     "dependencies": {
-        "dexie": "^4.0.11"
+        "dexie": "^4.0.11",
+        "tesseract.js": "^6.0.0"
     }
 }
