--- a/.env.testing
+++ b/.env.testing
@@ -1,37 +1,70 @@
-APP_NAME="Bill Meter PWA"
-APP_ENV=testing
-APP_KEY=base64:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:R4GiGKavV+ETdgTkl3CpYJh9rNEi6oE/I0QLlIFHEYE=
 APP_DEBUG=true
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+
+APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
+
+PHP_CLI_SERVER_WORKERS=4
+
+BCRYPT_ROUNDS=12
+
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
 DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
-FILESYSTEM_DISK=test
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
 
-CACHE_DRIVER=array
-SESSION_DRIVER=array
-QUEUE_CONNECTION=sync
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=cloudinary
 
-MAIL_MAILER=array
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+QUEUE_CONNECTION=database
 
-# OCR Configuration
-OCR_CONFIDENCE_THRESHOLD=80
-OCR_MAX_ATTEMPTS=1
-OCR_RETRY_DELAY=0
-OCR_ENABLE_NOTIFICATIONS=true
-OCR_LANGUAGE=fra
-OCR_ENABLE_LOGGING=false
-OCR_MONITORING_ENABLED=false
-OCR_PREPROCESSING_ENABLED=false
-OCR_CACHE_ENABLED=false
+CACHE_STORE=database
+CACHE_PREFIX=
 
-# Storage Configuration
-OCR_STORAGE_DISK=test
-OCR_STORAGE_PATH=ocr/training
+MEMCACHED_HOST=127.0.0.1
 
-# Cloudinary Mock Configuration
-CLOUDINARY_URL=cloudinary://fake:fake@fake
-CLOUDINARY_CLOUD_NAME=fake
-CLOUDINARY_API_KEY=fake
-CLOUDINARY_API_SECRET=fake
+REDIS_CLIENT=phpredis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_MAILER=log
+MAIL_SCHEME=null
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+VITE_APP_NAME="${APP_NAME}"
