--- a/package.json
+++ b/package.json
@@ -2,37 +2,28 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^2.0.3",
-        "@radix-ui/react-alert-dialog": "^1.1.6",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^22.13.5",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
-        "@types/ziggy-js": "^1.3.3",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "lucide-react": "^0.475.0",
-        "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^3.2.1",
-        "vite": "^6.0.11",
-        "vite-plugin-pwa": "^0.21.1",
-        "workbox-window": "^7.3.0"
+        "preview": "vite preview"
     },
     "dependencies": {
-        "dexie": "^4.0.11",
-        "tesseract.js": "^6.0.0"
+        "@inertiajs/react": "^1.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "lucide-react": "^0.331.0",
+        "recharts": "^2.12.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.0",
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.0"
     }
 }
